refactor: implement virtual thread batching, metadata-rich symbol DTOs, and memory-efficient caching with performance-optimized search pagination